--- a/index.html
+++ b/index.html
@@ -291,6 +291,11 @@
             <div
               class="col-lg-8 minh-100vh col-xl-7 bg-white pt-10 pt-lg-7 pb-6 pb-lg-3"
             >
+              <p
+                class="banner-oklahoma mt-3 fw-bolder d-flex justify-content-center text-uppercase"
+              >
+                Now Servicing Oklahoma!
+              </p>
               <div class="row align-items-center h-100">
                 <div class="col-lg-10 pb-3">
                   <h1 class="title-underline mb-4 pb-3">
@@ -937,16 +942,15 @@
               <div class="col-lg-9">
                 <blockquote class="blockquote">
                   <p>
-                    Integrity Roofing was nothing short of fantastic. Only one
-                    day to replace our roof. Very professional, courteous, and
-                    efficient. Clint and Paul are a great team. We were having
-                    trouble with our insurance claim, but with their knowledge,
-                    expertise, & professionalism, the insurance carrier agreed
-                    to pay our claim. "
+                    Great roofing company. They replaced my roof in one day.
+                    Very professional and no debris left afterwards. Clint and
+                    Paul were a pleasure to deal with and helped us out with our
+                    insurance claim every step of the way. Actually, all we did
+                    was file the claim and they took care of the rest. "
                   </p>
                   <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">C Williams </span
-                    ><br />The Woodlands
+                    <span class="h5 text-primary fw-medium">J Hamlin </span
+                    ><br />Frisco, TX
                   </footer>
                 </blockquote>
               </div>
@@ -972,58 +976,7 @@
                   </p>
                   <footer class="blockquote-footer text-end">
                     <span class="h5 text-primary fw-medium">Mr. Sarmiento </span
-                    ><br />San Antonio
-                  </footer>
-                </blockquote>
-              </div>
-            </div>
-
-            <div class="row justify-content-center">
-              <div class="col-6 col-lg-3">
-                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                  Reviews
-                </h3>
-                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                  Real Customers, Real Results
-                </h2>
-              </div>
-              <div class="col-lg-9">
-                <blockquote class="blockquote">
-                  <p>
-                    Outstanding roofing company from beginning to the end. My
-                    experience with Integrity Roofing was amazing. Clint and
-                    Paul both helped us with our insurance claim and that was
-                    very helpful and reassuring. Thanks guys !!"
-                  </p>
-                  <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">Ms. Smith </span
-                    ><br />Round Rock
-                  </footer>
-                </blockquote>
-              </div>
-            </div>
-
-            <div class="row justify-content-center">
-              <div class="col-6 col-lg-3">
-                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                  Reviews
-                </h3>
-                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                  Real Customers, Real Results
-                </h2>
-              </div>
-              <div class="col-lg-9">
-                <blockquote class="blockquote">
-                  <p>
-                    Great roofing company. They replaced my roof in one day.
-                    Very professional and no debris left afterwards. Clint and
-                    Paul were a pleasure to deal with and helped us out with our
-                    insurance claim every step of the way. Actually, all we did
-                    was file the claim and they took care of the rest. "
-                  </p>
-                  <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">J Hamlin </span
-                    ><br />Frisco
+                    ><br />San Antonio, TX
                   </footer>
                 </blockquote>
               </div>
@@ -1049,11 +1002,64 @@
                   </p>
                   <footer class="blockquote-footer text-end">
                     <span class="h5 text-primary fw-medium">M Bland </span
-                    ><br />Hollytree—Tyler
+                    ><br />Hollytree—Tyler, TX
                   </footer>
                 </blockquote>
               </div>
             </div>
+
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    Outstanding roofing company from beginning to the end. My
+                    experience with Integrity Roofing was amazing. Clint and
+                    Paul both helped us with our insurance claim and that was
+                    very helpful and reassuring. Thanks guys !!"
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">Ms. Smith </span
+                    ><br />Round Rock, TX
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    Integrity Roofing was nothing short of fantastic. Only one
+                    day to replace our roof. Very professional, courteous, and
+                    efficient. Clint and Paul are a great team. We were having
+                    trouble with our insurance claim, but with their knowledge,
+                    expertise, & professionalism, the insurance carrier agreed
+                    to pay our claim. "
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">C Williams </span
+                    ><br />The Woodlands-Houston, TX
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+
             <div class="row justify-content-center">
               <div class="col-6 col-lg-3">
                 <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
@@ -1066,22 +1072,16 @@
               <div class="col-lg-9">
                 <blockquote class="blockquote" data-aos="zoom-out-up">
                   <p>
-                    Working with Integrity Roofing was an absolute pleasure!
-                    From the initial consultation to the completion of our roof
-                    repair, they demonstrated professionalism, expertise, and
-                    exceptional customer service. The team arrived promptly,
-                    assessed the problem efficiently, and provided a clear
-                    explanation of the necessary repairs. Throughout the
-                    process, they kept us informed and involved, addressing any
-                    concerns with transparency and patience. The quality of
-                    their workmanship exceeded our expectations, and our roof
-                    looks better than ever. We highly recommend Integrity
-                    Roofing to anyone in need of reliable and skilled roofing
-                    services.
+                    Working with Clint at Integrity Roofing was an absolute
+                    pleasure! From the initial consultation to the completion of
+                    our roof repair, they demonstrated professionalism,
+                    expertise, and exceptional customer service. The team
+                    arrived promptly, assessed the problem efficiently, and
+                    provided a clear explanation of the necessary repairs.
                   </p>
                   <footer class="blockquote-footer text-end">
                     <span class="h5 text-primary fw-medium">G Parker</span
-                    ><br />Midland
+                    ><br />Midland,TX
                   </footer>
                 </blockquote>
               </div>
@@ -1105,7 +1105,7 @@
                   </p>
                   <footer class="blockquote-footer text-end">
                     <span class="h5 text-primary fw-medium">M Johnson</span
-                    ><br />San Antonio
+                    ><br />San Antonio, TX
                   </footer>
                 </blockquote>
               </div>
@@ -1129,7 +1129,7 @@
                   </p>
                   <footer class="blockquote-footer text-end">
                     <span class="h5 text-primary fw-medium">A Smith</span
-                    ><br />Austin
+                    ><br />Georgetown, TX
                   </footer>
                 </blockquote>
               </div>
@@ -1150,11 +1150,12 @@
                     peace of mind knowing it was installed by a reputable and
                     trustworthy company. We couldn't be happier with the results
                     and would highly recommend Integrity to anyone in need of
-                    top-notch roofing services."
+                    top-notch roofing services. Contact Clint for your roofing
+                    needs!"
                   </p>
                   <footer class="blockquote-footer text-end">
                     <span class="h5 text-primary fw-medium">David Garcia</span
-                    ><br />New Braunfels
+                    ><br />New Braunfels, TX
                   </footer>
                 </blockquote>
               </div>
