--- a/index.html
+++ b/index.html
@@ -714,10 +714,10 @@
           <div class="row">
             <div class="col">
               <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                Latest
+                Removal
               </h3>
               <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                Tear Down Project
+                Process
               </h2>
             </div>
           </div>
@@ -794,10 +794,10 @@
           <div class="row">
             <div class="col">
               <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                Latest
+                Installation
               </h3>
               <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                Install Project
+                Process
               </h2>
             </div>
           </div>
@@ -867,10 +867,10 @@
           <div class="row">
             <div class="col">
               <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                Latest
+                Completed
               </h3>
               <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                Completed Project
+                Project
               </h2>
             </div>
           </div>
