--- a/index.html
+++ b/index.html
@@ -322,12 +322,13 @@
                     Welcome to Integrity Roofing New Braunfels Texas, where
                     quality meets reliability in roofing solutions. Integrity
                     Roofing NBTX company boasts a team of salesmen who bring a
-                    unique advantage to the table. We are former insurance
-                    adjusters with specialized expertise in storm repair and
-                    insurance claims. Leveraging our extensive experience in
-                    assessing storm damage and navigating insurance procedures,
-                    we provide invaluable support to roofers and homeowners
-                    alike.
+                    unique advantage to the table. Our uniqueness is that we are
+                    primarily construction professionals, with many years in the
+                    industry, who are former insurance adjusters with a
+                    specialized expertise in storm repair and insurance claims.
+                    Leveraging our extensive experience in assessing storm
+                    damage and navigating insurance procedures, we provide
+                    invaluable support to roofers and homeowners alike.
                   </p>
 
                   <p style="margin-bottom: 20px">
