--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     Roofing NBTX company boasts a team of salesmen who bring a
                     unique advantage to the table. Our uniqueness is that we are
                     primarily construction professionals, with many years in the
-                    industry, who are former insurance adjusters with a
+                    industry, who are also former insurance adjusters with a
                     specialized expertise in storm repair and insurance claims.
                     Leveraging our extensive experience in assessing storm
                     damage and navigating insurance procedures, we provide
