--- a/portfolio.html
+++ b/portfolio.html
@@ -308,10 +308,10 @@
                   <div class="col-md-6 col-lg-4 p-3 grid-item print vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6158.jpg"
+                      href="../assets/img/clients/image0.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6158.jpg"
+                        src="../assets/img/clients/image0.jpeg"
                         alt="Image 01"
                     /></a>
                   </div>
@@ -320,20 +320,20 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6160.jpg"
+                      href="../assets/img/clients/image1.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6160.jpg"
+                        src="../assets/img/clients/image1.jpeg"
                         alt="Image 02"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6161.jpg"
+                      href="../assets/img/clients/image2.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6161.jpg"
+                        src="../assets/img/clients/image2.jpeg"
                         alt="Image 03"
                     /></a>
                   </div>
@@ -342,42 +342,42 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6162.jpg"
+                      href="../assets/img/clients/image3.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6162.jpg"
+                        src="../assets/img/clients/image3.jpeg"
                         alt="Image 04"
                     /></a>
                   </div>
                   <div class="col-12 col-lg-8 p-3 grid-item art vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6163.jpg"
+                      href="../assets/img/clients/image4.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6163.jpg"
+                        src="../assets/img/clients/image4.jpeg"
                         alt="Image 05"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item art online">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6166.jpg"
+                      href="../assets/img/clients/image5.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6166.jpg"
+                        src="../assets/img/clients/image5.jpeg"
                         alt="Image 06"
                     /></a>
                   </div>
                   <div class="col-12 col-lg-8 p-3 grid-item art online">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6167.jpg"
+                      href="../assets/img/clients/image6.jpeg"
                       class="position-relative"
                     >
                       <img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6167.jpg"
+                        src="../assets/img/clients/image6.jpeg"
                         alt="Image 07"
                       />
                       <!-- <span class="icon icon-sm position-absolute mt-n6 ms-3">
@@ -388,50 +388,50 @@
                   <div class="col-md-6 col-lg-4 p-3 grid-item art vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6168.jpg"
+                      href="../assets/img/clients/image7.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6168.jpg"
+                        src="../assets/img/clients/image7.jpeg"
                         alt="Image 08"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item art vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6169.jpg"
+                      href="../assets/img/clients/image8.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6169.jpg"
+                        src="../assets/img/clients/image8.jpeg"
                         alt="Image 09"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6170.jpg"
+                      href="../assets/img/clients/image9.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6170.jpg"
+                        src="../assets/img/clients/image9.jpeg"
                         alt="Image 10"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6171.jpg"
+                      href="../assets/img/clients/image10.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6171.jpg"
+                        src="../assets/img/clients/image10.jpeg"
                         alt="Image 11"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6172.jpg"
+                      href="../assets/img/clients/image11.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6172.jpg"
+                        src="../assets/img/clients/image11.jpeg"
                         alt="Image 12"
                     /></a>
                   </div>
@@ -439,10 +439,10 @@
                   <div class="col-md-7 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6173.jpg"
+                      href="../assets/img/clients/image12.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6173.jpg"
+                        src="../assets/img/clients/image12.jpeg"
                         alt="Image 13"
                     /></a>
                   </div>
@@ -451,20 +451,20 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6174.jpg"
+                      href="../assets/img/clients/image13.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6174.jpg"
+                        src="../assets/img/clients/image13.jpeg"
                         alt="Image 14"
                     /></a>
                   </div>
                   <div class="col-md-4 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6175.jpg"
+                      href="../assets/img/clients/image14.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6175.jpg"
+                        src="../assets/img/clients/image14.jpeg"
                         alt="Image 15"
                     /></a>
                   </div>
@@ -472,10 +472,10 @@
                   <div class="col-md-6 col-lg-4 p-3 grid-item print vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6176.jpg"
+                      href="../assets/img/clients/image15.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6176.jpg"
+                        src="../assets/img/clients/image15.jpeg"
                         alt="Image 16"
                     /></a>
                   </div>
@@ -484,20 +484,20 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6177.jpg"
+                      href="../assets/img/clients/image16.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6177.jpg"
+                        src="../assets/img/clients/image16.jpeg"
                         alt="Image 17"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6178.jpg"
+                      href="../assets/img/clients/image17.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6178.jpg"
+                        src="../assets/img/clients/image17.jpeg"
                         alt="Image 18"
                     /></a>
                   </div>
@@ -507,35 +507,35 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6179.jpg"
+                      href="../assets/img/clients/image18.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6179.jpg"
+                        src="../assets/img/clients/image18.jpeg"
                         alt="Image 19"
                     /></a>
                   </div>
                   <div class="col-12 col-lg-8 p-3 grid-item art vision">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6180.jpg"
+                      href="../assets/img/clients/image19.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6180.jpg"
+                        src="../assets/img/clients/image19.jpeg"
                         alt="Image 20"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item art online">
                     <a
                       data-fancybox="gallery"
-                      href="../assets/img/clients/IMG_6181.jpg"
+                      href="../assets/img/clients/image20.jpeg"
                       ><img
                         class="img-fluid w-100"
-                        src="../assets/img/clients/IMG_6181.jpg"
+                        src="../assets/img/clients/image20.jpeg"
                         alt="Image 21"
                     /></a>
                   </div>
 
-                  <div class="col-md-7 p-3 grid-item identity vision">
+                  <!-- <div class="col-md-7 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
                       href="../assets/img/clients/IMG_6182.jpg"
@@ -589,8 +589,8 @@
                         src="../assets/img/clients/IMG_6187.jpg"
                         alt="Image 26"
                     /></a>
-                  </div>
-                  <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
+                  </div> -->
+                  <!-- <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
                       href="../assets/img/clients/IMG_6162.jpg"
@@ -599,7 +599,7 @@
                         src="../assets/img/clients/IMG_6162.jpg"
                         alt="Image 27"
                     /></a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
